--- a/back/package.json
+++ b/back/package.json
@@ -2,7 +2,7 @@
   "name": "geometry-engine-backend",
   "version": "0.1.0",
   "description": "sample sls google cloud app",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
