--- a/back/serverless.yml
+++ b/back/serverless.yml
@@ -15,9 +15,6 @@ plugins:
   - serverless-offline
   - serverless-plugin-typescript
 
-
-# needs more granular excluding in production as only the serverless provider npm
-# package should be excluded (and not the whole node_modules directory)
 package:
   exclude:
     - node_modules/**
@@ -29,8 +26,12 @@ functions:
     handler: "processPolygonPayload"
     events:
       - http: path
+  processPolygonPayloadSQS:
+    handler: "processPolygonPayloadSQS"
+    events:
+      - http: path
   processPolygonBatch:
-    handler: processPolygonBatch
+    handler: "processPolygonBatch"
     events:
       - event:
           eventType: providers/cloud.pubsub/eventTypes/topic.publish
