--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@google-cloud/pubsub": "^3.1.1",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.0.1",
     "geometric": "^2.5.0",
     "uuid": "^9.0.0"
   }
